# cloudsecurity-af

./: Dockerfile  README.md  cli.py  docker-compose.local.yml  docker-compose.yml  fix_notes.py  pyproject.toml  trigger.py
benchmark/: README.md
benchmarks/: README.md
docs/: ARCHITECTURE.md  GITHUB_ACTIONS.md  TERRAGOAT_EVALUATION_FINAL.md
prompts/chain/: path_constructor.txt
prompts/hunt/: compliance.txt  compute.txt  data.txt  iam.txt  logging.txt  network.txt  secrets.txt
prompts/prove/: live_prover.txt  static_prover.txt
prompts/remediate/: fix_generator.txt
src/cloudsecurity_af/: __init__.py  app.py  config.py  orchestrator.py  scoring.py
src/cloudsecurity_af/agents/: _utils.py
src/cloudsecurity_af/agents/chain/: path_constructor.py
src/cloudsecurity_af/agents/hunt/: compliance_hunter.py  compute_hunter.py  data_hunter.py  iam_hunter.py  logging_hunter.py  network_hunter.py  secrets_hunter.py
src/cloudsecurity_af/agents/prove/: live_prover.py  static_prover.py
src/cloudsecurity_af/agents/recon/: _graph_builder_fast.py  _terraform_parser.py  cloud_connector.py  drift_detector.py  iac_reader.py  resource_graph_builder.py
src/cloudsecurity_af/output/: __init__.py  json_output.py  report.py  sarif.py
src/cloudsecurity_af/reasoners/: __init__.py  chain.py  hunt.py  phases.py  prove.py  recon.py  remediate.py
src/cloudsecurity_af/schemas/: __init__.py  chain.py  hunt.py  input.py  output.py  prove.py  recon.py  views.py
tests/: test_config.py  test_graph_context.py  test_schemas.py  test_scoring.py  test_utils.py
(+1 files in other folders)
