[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudsecurity-af"
version = "0.1.0"
description = "AI-Native Cloud Infrastructure Security Scanner built on AgentField"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "AgentField", email = "hello@agentfield.dev" }]
dependencies = [
    "agentfield>=0.1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyhcl2>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
cloudsecurity-af = "cloudsecurity_af.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudsecurity_af"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
